Fixed page thumbnails on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,20 +179,16 @@ ul.navbar-nav, ul.navbar-nav li.menu-item {
 /* Site thumbnail */
 .thumbnail-wrapper {
   text-align: center; }
-  @media (max-width: 860px) {
-    .thumbnail-wrapper img {
-      height: 35vh;
-      -o-object-fit: cover;
-         object-fit: cover; } }
+  .thumbnail-wrapper img {
+    height: 45vh;
+    -o-object-fit: none;
+       object-fit: none;
+    width: 100%; }
+    @media (max-width: 860px) {
+      .thumbnail-wrapper img {
+        -o-object-fit: cover;
+           object-fit: cover; } }
 
-/*.single-bot{*/
-.thumbnail-wrapper img {
-  max-height: 45vh;
-  -o-object-fit: none;
-     object-fit: none;
-  width: 100%; }
-
-/*}*/
 /* Site footer */
 .footer .footer-callout {
   max-width: 300px;
